# morpe

./: .gitignore  README.md  license.md  readme.md
Cpp/: Morpe.sln
Cpp/ConsoleApp/: ConsoleApp.csproj  Program.cs
Cpp/ConsoleApp/Properties/: AssemblyInfo.cs
Cpp/Morpe/: AssemblyInfo.cpp  Classifier.cpp  Classifier.h  Morpe.vcxproj  Morpe.vcxproj.filters  MorpeData.cpp  MorpeOptions.cpp  MorpeOptions.h  MorpeQuant.cpp  MorpeQuant.h  MorpeSolverOutput.h  Poly.cpp  Poly.h  Stdafx.cpp  Stdafx.h  Tensor.h  Util.h
Csharp/: MorpeSharp.sln
Csharp/MorpeSharp/: CategorizedData.cs  Classifier.cs  ClassifierOptions.cs  D.MonotonicRegressor.cs  D.cs  F.MonotonicRegressor.cs  F.cs  Fitted.cs  MonotonicRegression.cs  MonotonicRegressionType.cs  MonotonicRegressor.cs  Morpe.csproj  OptimizationMode.cs  Poly.cs  PreOptimizationAnalysis.cs  Quant.cs  Quantization.cs  Rank.cs  SolverOptions.cs  SpaceConditioner.cs  SpatialConditionMeasurer.cs  SpatialConditioner.cs  Static.cs  Trainer.cs  UniCrit.cs  WeightingRule.cs
Csharp/MorpeSharp/Draw/: Color.cs  ContourVertex.cs  Point.cs
Csharp/MorpeSharp/Properties/: AssemblyInfo.cs
Matlab/: Exemplar_Include.cpp  FastExp.cpp  Mcl_Accuracy.mexw32  Mcl_Accuracy.mexw64  Mcl_AccuracyN.m  Mcl_Axis_Ctor.m  Mcl_Axis_Step1.m  Mcl_CleanSamples.m  Mcl_ConditionalEntropy.mexw32  Mcl_ConditionalEntropy.mexw64  Mcl_Exemplar_CalcDv.cpp  Mcl_Exemplar_CalcDv.mexw32  Mcl_Exemplar_CalcDv_Train.cpp  Mcl_Exemplar_CalcDv_Train.mexw32  Mcl_Exemplar_CheckWithTngl.m  Mcl_Exemplar_Ctor.m  Mcl_Exemplar_Hfunc.m  Mcl_Exemplar_Init.cpp  Mcl_Exemplar_Init.mexw32  Mcl_Exemplar_Tngl_Ctor.m  Mcl_Exemplar_Train.m  Mcl_FastExp_Ctor.m  Mcl_ForceMonotonic.cpp  Mcl_ForceMonotonic.m  Mcl_FracDist_Sample.m  Mcl_Lamda.m  Mcl_MapDv.cpp  Mcl_MapDv.mexw32  Mcl_MinimizeEntropy.m  Mcl_NiceNumber.m  Mcl_Poly_CalcDv.cpp  Mcl_Poly_CalcDv.mexw64  Mcl_Poly_CheckWithTngl.m  Mcl_Poly_Coeff.h  Mcl_Poly_Coeff.mexw64  Mcl_Poly_Compress.m  Mcl_Poly_Ctor.m  Mcl_Poly_Hfunc.m  Mcl_Poly_Init.cpp  Mcl_Poly_Init.h  (+39 more)
src/cpp/: .editorconfig  .gitignore  CMakeLists.txt  build.ps1  readme.md
src/cpp/conan/profiles/: win64
src/cpp/morpe/: CMakeLists.txt  conanfile.txt
src/cpp/morpe/include/: morpe.h
src/cpp/morpe/include/morpe/: _internal.h  err.h  numerics.h  polynomial.h  sal.h
src/cpp/morpe/include/morpe/err/: stop_error.h
src/cpp/morpe/include/morpe/mingw64/: sal.h
src/cpp/morpe/include/morpe/numerics/: D1.h  I2.h  IX.h  readme.md
src/cpp/morpe/include/morpe/numerics/D1/: monotonic_regression_type.h  monotonic_regressor.h
src/cpp/morpe/src/: morpe.cpp
src/cpp/morpe/src/morpe/: err.cpp  polynomial.cpp
src/cpp/morpe/src/morpe/numerics/: I2.cpp  IX.cpp
src/cpp/morpe/src/morpe/numerics/D1/: monotonic_regressor.cpp
src/cpp/tests/: CMakeLists.txt
src/cpp/tests/morpe/: CMakeLists.txt  conanfile.txt
src/cpp/tests/morpe/include/: main.h  test_morpe.h
src/cpp/tests/morpe/src/: main.cpp  numerics.cpp  polynomial.cpp
src/csharp/: .editorconfig  Directory.Build.props  Morpe.sln  readme.md
src/csharp/.github/: codeowners
src/csharp/Morpe/: CategorizedData.cs  CategorizedDataState.cs  CategorizedDataStats.cs  CategoryWeightingRule.cs  CategoryWeights.cs  Classifier.cs  ClassifierId.cs  ClassifierOptions.cs  Fitted.cs  GaussianStats.cs  MonotonicRegressionType.cs  Morpe.csproj  (+23 more)
src/do_not_use/: readme.md
src/matlab/: Mcl_BinarySearchRows.cpp  Mcl_FracDist_Ctor.m  Mcl_MapDv.h  Mcl_Poly_CalcDv.h  Mcl_Poly_Expand.m  Mcl_Poly_Tngl_Ctor.m  Mcl_RandRotate.cpp  Mcl_RangeLimit.mexw64  readme.md
(+67 files in other folders)
